--- a/index.html
+++ b/index.html
@@ -1,6 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <title>Travel Agency Blog</title>
+  </head>
 
-  <body></body>
+  <body>
+    <h1>Travel Agency Blog</h1>
+    <h3>Terrific Travel at Tremendous Discounts</h3>
+    <p>
+      Out Travel Agents will get you where you want to go, when you want to go,
+      for the price you want to pay!
+    </p>
+    <ul>
+      <li>Eiffel Tower (Tour Eifel)</li>
+      <li>Musée di Louvre</li>
+      <li>Notre-Dame Cathedral (Cathedrale de Notre Dame de Paris)</li>
+      <li>Champs-Élysées</li>
+      <li>Arc de Triomphe</li>
+    </ul>
+
+    <ol>
+      <li>Climb Mt. Fuji</li>
+      <li>Visit Akihabara</li>
+      <li>Try local food</li>
+      <li>Visit shrines</li>
+      <li>Go to cafes</li>
+    </ol>
+  </body>
 </html>
